updating index page for GH

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 	<head>
 		<meta charset="UTF-8">
-		<title>Homepage</title>
+		<title>Home page --changed to be pushed on github</title>
 	</head>
 	
 	<body>
